crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__unary_recovery_5.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"++i\"#)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: Unary(
                    UnaryExpr {
                        op: UAdd,
                        operand: Node {
                            node: Missing(
                                MissingExpr,
                            ),
                            filename: "",
                            line: 1,
                            column: 1,
                            end_line: 1,
                            end_column: 2,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            op: Add,
            right: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "i",
                                filename: "",
                                line: 1,
                                column: 2,
                                end_line: 1,
                                end_column: 3,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 2,
                end_line: 1,
                end_column: 3,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}
